--- a/class/portfolio/css/portfolio.css
+++ b/class/portfolio/css/portfolio.css
@@ -1,8 +1,28 @@
 body{
     font-family: 'Libre Baskerville', serif;
     font-size: 20px;
-    color:  #7d5944;
 }
+
+.green{
+    background:#606046
+}
+
+.brown{
+    background: #7d5944;
+}
+
+.light-bg,
+.light-bg a,
+.light-bg nav a{
+    color:white;
+}
+
+.dark-bg,
+.dark-bg a,
+.dark-bg nav a{
+    color:white;
+}
+
 
 h1 {
     font-size: 4.5em;
@@ -15,25 +35,24 @@ h2 {
     color: #373333;
 }
 
+
 h3 {
     font-size: 3.35em;
     color: #000000;
 }
 
+.emphasis{
+    font-size:2.5em;
+    text-align:center;
+}
+
+
+
+
 h4 {
     font-size: 1.4em;
-    color: white;
 }
 
-h5 {
-    font-size: 65px;
-    color:white;
-}
-
-h6 {
-    font-size: 3.25em;
-    color:black;
-}
 
 ul {
     font-size: 1.5em;
@@ -46,10 +65,10 @@ nav a {
     padding: 0 1em 0 0;
 }
 
-a {
-    font-size: 1.75em;
-    color: #7d5944;
-}
+
+
+
+
 
 .nav{
     margin: 2em 0;
